--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@reown/appkit": "^1.6.0",
     "@reown/appkit-adapter-wagmi": "^1.6.0",
-    "@tanstack/react-query": "^5.62.7",
+    "@tanstack/react-query": "^5.62.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "connectkit": "^1.8.2",
     "ethers": "^6.13.4",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
@@ -26,8 +27,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.21.55",
-    "wagmi": "^2.14.3",
+    "viem": "^2.21.57",
+    "wagmi": "^2.14.6",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
